[Ayush5304] Implemented ConnectSphere-Backend